--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
   <img class = "picsPage" src = "dittowall.jpg" id = "track">
   <img class = "picsPage" src = "dittowall.jpg" id = "yea">
   <h1 id = "maraText"> here's a picture of my sister. she's my number one supporter and i love her!! we love eating chic-fil-a and in-n-out </h1>
-  <h1 id = "trackText">hello </h1>
+  <h1 id = "trackText"> hello </h1>
   <h1 id = "yeaText"> hey </h1>
 </div>
 <div class = "thirdPage">
@@ -91,11 +91,12 @@
             <p class = "justCodeText"> JUST CODING THINGS </p>
             <input type="image" src="redesign.png" name="button" class="redesign"/>
             <p class = "redesignText"> PHOEBE'S <br>CREATIONS</p>
-            <input type="image" src="lucyLogo.png" name="button" class="lucy"/>
-            <p class = "lucyText"> LUCY'S <br>PSYCHIATRY</p>
+            <input type="image" src="night.gif" name="button" class="techMag"/>
+            <p class = "techMagText"> WHAT'S UP <br>WITH TECH?</p>
             <input type="image" src="night.gif" name="button" class="shetem"/>
             <p class = "shetemText"> S(HE)TEM</p>
           </div>
+
           <div class = "pseudoPage">
             <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitleF">Pseudo </h1>
@@ -105,8 +106,9 @@
             <p class = "proTextSub">i know many friends that are catfished. they didn't know </p>
             <p class = "proTextTwo"> how i contributed </p>
             <p class = "proTextSubTwo"> as a co-founder & lead web designer, i tried to </p>
-                        <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">game</button></a>
+            <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">game</button></a>
           </div>
+
           <div class = "justCodePage">
             <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitle">Just Coding Things </h1>
@@ -128,16 +130,24 @@
             <img class = "logoJustCode" src = "redesign.png">
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub">after going to kode with klossy, i realized that i really loved to spend my time coding and designing websites. because of this, i wanted to put my website work out there on the internet :P<br><br> i also wanted to bring back and finish the old industrial designs that i did in my notebook as a kid and add more to it</p>
-            <p class = "exampleText">Some Projects On Phoebe's Creations</p>
-            <p class = "exampleSub"></p>
+            <p class = "exampleText">Some Projects that I did on Phoebe's Creations:</p>
+            <div class = "exampleAll">
+              <div class = "lucyAll">
+                <a href = "http://phoebecreates.co/lucy.html" target = "_blank"><img class = "lucy" src = "lucyLogo.png"></a>
+                <p class = "exLucy">Lucy's <br>Psychiatry</p>
+            </div>
+              <div class = "sdgAll">
+                <a href = "http://phoebecreates.co/sdgs.html" target = "_blank"><img class = "SDG" src = "SDG.jpeg"></a>
+                <p class = "exSDG">SDGs to SCV</p>
+              </div>
           </div>
+        </div>
 
-          <div class = "lucyPage">
-            <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
-            <h1 class = "projectTitle"> Lucy's Psychiatry </h1>
-            <p class = "projectPara"> bringing affordable and confidential mental wellness resources to santa clarita</p>
-            <img class = "logoLucy" src = "lucyLogo.png">
-          </div>
+        <div class = "techMagPage">
+          <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
+          <h1 class = "projectTitleS"> What's Up With Tech? </h1>
+          <p class = "projectPara"> a online website that gives resources to young girls interested in the STEM fields </p>
+        </div>
 
           <div class = "shetemPage">
             <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
@@ -153,17 +163,49 @@
           <div id="mydivheader">
           <button id="btn_popupThree">
             <input type="image" src="curosityFolder.png" name="button" class="curosities"/>
-            <p class = "backgroundPopText"> Curosities </p>
+            <p class = "backgroundPopText"> Curiosities </p>
           </button>
           </div>
           </div>
           <div id="smokeThree"></div>
           <div id="popupThree">
-            <div id="popup_barThree">Curosities<span id="btn_closeThree">X</span></div>
+            <div id="popup_barThree">Curiosities<span id="btn_closeThree">X</span></div>
             <div class = "curosPageOne">
-              <img class = "picsPage" src = "yayoi.jpg" id = "yayoi">
-              <img class = "picsPage" src = "memeish.jpg" id = "webDesign">
-              <img class = "picsPage" src = "memeish.jpg" id = "ar">
+              <div class = "yayoiDiv">
+                <input type="image" src="yayoi.jpg" name="button" id="yayoi" class = "picsPage"/>
+                <p class = "curioText"> yayoi <br>kusama </p>
+              </div>
+              <div class = "webDesignDiv">
+                <input type="image" src="memeish.jpg" name="button" id="webDesign" class = "picsPage"/>
+                <p class = "curioText"> web <br> design </p>
+              </div>
+              <div class = "dreamscapeDiv">
+                <input type="image" src="memeish.jpg" name="button" id="dreamscape" class = "picsPage"/>
+                <p class = "curioText"> dreamscape <br> immersive </p>
+              </div>
+            </div>
+            <div class = "curosPageTwo">
+              <div class = "yayoiDiv">
+                <input type="image" src="yayoi.jpg" name="button" id="yayoi" class = "picsPage"/>
+                <p class = "curioText"> yayoi <br>kusam </p>
+              </div>
+              <div class = "webDesignDiv">
+                <input type="image" src="memeish.jpg" name="button" id="webDesign" class = "picsPage"/>
+                <p class = "curioText"> web <br> design </p>
+              </div>
+              <div class = "dreamscapeDiv">
+                <input type="image" src="memeish.jpg" name="button" id="dreamscape" class = "picsPage"/>
+                <p class = "curioText"> dreamscape <br> immersive </p>
+              </div>
+            </div>
+            <p class = "curioWhy"> why? </p>
+            <p class = "curioAnswer"> click the images to see why i <br>have an interest for that thing <br>& then click the arrows to see <br>more curiosities</p>
+            <div class = "lineFlexC">
+              <hr class = "lineAbout" align = "center" color = "#0b6069">
+            </div>
+            <div class = "arrows">
+              <input type = "image" src = "aboutArrowL.png" name = "button" class = "leftArrowC">
+              <input type = "image" src = "aboutArrowR.png" name = "button" class = "rightArrowC">
             </div>
           </div>
         </div>
@@ -203,7 +245,8 @@
           <div class = "switchColorTwo">
             <input type = "button" name "button" class = "purple"/>
             <input type = "button" name "button" class = "pink"/>
-            <input type = "image" src = "ditto.png" name "button" class = "customPic"/>
+            <input type = "button" name "button" class = "yellow"/>
+            <!-- <input type = "image" src = "ditto.png" name "button" class = "customPic"/> -->
           </div>
   </div>
 </div>
@@ -231,6 +274,11 @@
               <p class = "noteSubTextMenu">10/25/19</p>
             </button>
             <hr class = "noteLine" align = "left" color = "black">
+            <button class = "buttonNoteFour">
+              <p class = "titleNoteMenu"> A Change </p>
+              <p class = "noteSubTextMenu">11/15/19</p>
+            </button>
+          <hr class = "noteLine" align = "left" color = "black">
           </div>
           <div class = "textNotes">
             <p class = "titleNote"> October 7, 2019 at 4:30PM </p>
