--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
             <img class = "logoJustCode" src = "pseudoLogo.png">
             <p class = "projectPara">an online web game based on online predators and how to identify and approach one if one were ever put in the situation </p>
             <p class = "proText">why i did this?</p>
-            <p class = "proTextSub">i know many friends that are catfished. they didn't know </p>
+            <p class = "proTextSub">i know many friends that are catfished. since only teens, they didn't know the effects of talking to strangers online. they just wanted to escape from the world and have fun. sometimes its not just fun though</p>
             <p class = "proTextTwo"> how i contributed </p>
             <p class = "proTextSubTwo"> as a co-founder & lead web designer, i tried to </p>
             <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">game</button></a>
@@ -136,6 +136,7 @@
                 <a href = "http://phoebecreates.co/lucy.html" target = "_blank"><img class = "lucy" src = "lucyLogo.png"></a>
                 <p class = "exLucy">Lucy's <br>Psychiatry</p>
             </div>
+            <a href = "http://phoebecreates.co/index.html" target = "_blank"><button type="button" class = "redesignBut">website?</button></a>
               <div class = "sdgAll">
                 <a href = "http://phoebecreates.co/sdgs.html" target = "_blank"><img class = "SDG" src = "SDG.jpeg"></a>
                 <p class = "exSDG">SDGs to SCV</p>
@@ -145,14 +146,16 @@
 
         <div class = "techMagPage">
           <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
-          <h1 class = "projectTitleS"> What's Up With Tech? </h1>
-          <p class = "projectPara"> a online website that gives resources to young girls interested in the STEM fields </p>
+          <h1 class = "projectTitleT"> What's Up With Tech? </h1>
+          <p class = "projectPara"> a magazine focused on explaining the advantages and disadvantages to medical ethics </p>
+          <p class = "proText">why i did this?</p>
         </div>
 
           <div class = "shetemPage">
             <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitleS"> S(HE)TEM </h1>
             <p class = "projectPara"> a online website that gives resources to young girls interested in the STEM fields </p>
+            <p class = "proText">why i did this?</p>
           </div>
 
 
@@ -185,18 +188,8 @@
               </div>
             </div>
             <div class = "curosPageTwo">
-              <div class = "yayoiDiv">
-                <input type="image" src="yayoi.jpg" name="button" id="yayoi" class = "picsPage"/>
-                <p class = "curioText"> yayoi <br>kusam </p>
-              </div>
-              <div class = "webDesignDiv">
-                <input type="image" src="memeish.jpg" name="button" id="webDesign" class = "picsPage"/>
-                <p class = "curioText"> web <br> design </p>
-              </div>
-              <div class = "dreamscapeDiv">
-                <input type="image" src="memeish.jpg" name="button" id="dreamscape" class = "picsPage"/>
-                <p class = "curioText"> dreamscape <br> immersive </p>
-              </div>
+            <p class = "curoSecArticle"> sweet article finds </p>
+            <a href = "https://www.npr.org/2019/07/18/743157480/toys-r-us-is-coming-back-but-with-a-different-approach" target = "_blank"><p class = "curoFirstArt"> the Toys R Us rebrand </p></a>
             </div>
             <p class = "curioWhy"> why? </p>
             <p class = "curioAnswer"> click the images to see why i <br>have an interest for that thing <br>& then click the arrows to see <br>more curiosities</p>
