--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
             <p class = "justCodeText"> JUST CODING THINGS </p>
             <input type="image" src="redesign.png" name="button" class="redesign"/>
             <p class = "redesignText"> PHOEBE'S <br>CREATIONS</p>
-            <input type="image" src="night.gif" name="button" class="techMag"/>
+            <input type="image" src="techlogo.PNG" name="button" class="techMag"/>
             <p class = "techMagText"> WHAT'S UP <br>WITH TECH?</p>
             <input type="image" src="night.gif" name="button" class="shetem"/>
             <p class = "shetemText"> S(HE)TEM</p>
@@ -100,7 +100,7 @@
           <div class = "pseudoPage">
             <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitleF">Pseudo </h1>
-            <img class = "logoJustCode" src = "pseudoLogo.png">
+            <img class = "logoPseudo" src = "pseudoLogo.png">
             <p class = "projectPara">an online web game based on online predators and how to identify and approach one if one were ever put in the situation </p>
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub">i know many friends that are catfished. since only teens, they didn't know the effects of talking to strangers online. they just wanted to escape from the world and have fun. sometimes its not just fun though</p>
@@ -147,8 +147,10 @@
         <div class = "techMagPage">
           <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
           <h1 class = "projectTitleT"> What's Up With Tech? </h1>
-          <p class = "projectPara"> a magazine focused on explaining the advantages and disadvantages to medical ethics </p>
+          <img class = "logoTech" src = "techlogo.PNG">
+          <p class = "projectPara"> a magazine focused on explaining the advantages and disadvantages to the medical technologies of the future </p>
           <p class = "proText">why i did this?</p>
+
         </div>
 
           <div class = "shetemPage">
@@ -156,6 +158,9 @@
             <h1 class = "projectTitleS"> S(HE)TEM </h1>
             <p class = "projectPara"> a online website that gives resources to young girls interested in the STEM fields </p>
             <p class = "proText">why i did this?</p>
+            <p class = "proTextSub"> on the last two days at kode with klossy, everyone was paired up with a partner to make any type of website. my partner and i were both passionate about women empowerment. with this passion in mind, we decided to focus our website around giving girls more resources in STEM since we did not really see that through our schools.</p>
+            <p class = "proTextTwo"> how i contributed </p>
+            <p class = "proTextThree"> the outcomes: </p>
           </div>
 
 
