--- a/home.html
+++ b/home.html
@@ -99,14 +99,14 @@
 
           <div class = "pseudoPage">
             <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
-            <h1 class = "projectTitleF">Pseudo </h1>
+            <h1 class = "projectTitleF">PSEUDO </h1>
             <img class = "logoPseudo" src = "pseudoLogo.png">
             <p class = "projectPara">an online web game based on online predators and how to identify and approach one if one were ever put in the situation </p>
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub">i know many friends that are catfished. since only teens, they didn't know the effects of talking to strangers online. they just wanted to escape from the world and have fun. sometimes its not just fun though</p>
             <p class = "proTextTwo"> how i contributed </p>
             <p class = "proTextSubTwo"> as a co-founder & lead web designer, i tried to </p>
-            <a href = "https://mgykx.github.io/justcodingthings/index.html" target = "_blank"><button type="button" class = "justCodeBut">game</button></a>
+            <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "justCodeBut">game</button></a>
           </div>
 
           <div class = "justCodePage">
@@ -148,7 +148,7 @@
           <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
           <h1 class = "projectTitleT"> What's Up With Tech? </h1>
           <img class = "logoTech" src = "techlogo.PNG">
-          <p class = "projectPara"> a magazine focused on explaining the advantages and disadvantages to the medical technologies of the future </p>
+          <p class = "projectPara"> a magazine focused on explaining the advantages and disadvantages of the technologies of the future </p>
           <p class = "proText">why i did this?</p>
 
         </div>
