--- a/home.html
+++ b/home.html
@@ -103,10 +103,12 @@
             <img class = "logoPseudo" src = "pseudoLogo.png">
             <p class = "projectPara">an online web game based on online predators and how to identify and approach one if one were ever put in the situation </p>
             <p class = "proText">why i did this?</p>
-            <p class = "proTextSub">i know many friends that are catfished. since only teens, they didn't know the effects of talking to strangers online. they just wanted to escape from the world and have fun. sometimes its not just fun though</p>
+            <p class = "proTextSub">i know many friends that are catfished. since they were only teens, they didn't know the effects of talking to strangers online. they just wanted to escape from the world and have fun. sometimes its not just fun though. i wanted to help others such as my friends and help them be caution when online. therefore, my friend, megan kim, and i created a game where you will be placed in scenarios talking to possible catfishers</p>
             <p class = "proTextTwo"> how i contributed </p>
-            <p class = "proTextSubTwo"> as a co-founder & lead web designer, i tried to </p>
-            <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "justCodeBut">game</button></a>
+            <p class = "proTextSubTwo"> as i helped start the project, i also was involved in creating the game. i created everyone's profile, the tutorial, updated the blogs, and put in the scripts for the chat </p>
+            <p class = "proTextThreeP"> wishful outcomes: </p>
+            <p class = "proTextSubThree">- that we can spread awareness showing online predators are real and ppl need to be aware <br><br>- can add more characters and monetize the game </p>
+            <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "pseudoBut">game</button></a>
           </div>
 
           <div class = "justCodePage">
