--- a/home.html
+++ b/home.html
@@ -109,6 +109,7 @@
             <p class = "proTextThreeP"> wishful outcomes: </p>
             <p class = "proTextSubThree">- that we can spread awareness showing online predators are real and ppl need to be aware <br><br>- can add more characters and monetize the game </p>
             <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "pseudoBut">game</button></a>
+            <a href = "http://phoebecreates.co/pseudo.html" target = "_blank"><button type="button" class = "pseudoButTwo">process</button></a>
           </div>
 
           <div class = "justCodePage">
@@ -152,6 +153,11 @@
           <img class = "logoTech" src = "techlogo.PNG">
           <p class = "projectPara"> a magazine focused on explaining the advantages and disadvantages of the technologies of the future </p>
           <p class = "proText">why i did this?</p>
+          <p class = "proTextSub"> i am an avid lover of technology. i am constantly trying to keep myself updated on the latest content. usually, i keep up with new updates to phones, laptops, and cars. i tried to change the topic of technology that i looked at to medical devices. because of this, it opened my eyes to the saying that new tech doesn't always give benefits.</p>
+          <p class = "proTextTwo"> how i contributed </p>
+          <p class = "proTextSubTwo">i became a co-founder of this project and role was mainly focused around coding and designing the website as well as formatting and laying out the design of the pages of the magazine</p>
+          <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "techBut">process</button></a>
+          <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "techButTwo">website</button></a>
 
         </div>
 
