--- a/home.html
+++ b/home.html
@@ -95,6 +95,8 @@
             <p class = "techMagText"> WHAT'S UP <br>WITH TECH?</p>
             <input type="image" src="night.gif" name="button" class="shetem"/>
             <p class = "shetemText"> S(HE)TEM</p>
+            <input type="image" src="aznlogo.PNG" name="button" class="azn"/>
+            <p class = "aznText"> AZN <br>MAGAZINE</p>
           </div>
 
           <div class = "pseudoPage">
@@ -156,8 +158,8 @@
           <p class = "proTextSub"> i am an avid lover of technology. i am constantly trying to keep myself updated on the latest content. usually, i keep up with new updates to phones, laptops, and cars. i tried to change the topic of technology that i looked at to medical devices. because of this, it opened my eyes to the saying that new tech doesn't always give benefits.</p>
           <p class = "proTextTwo"> how i contributed </p>
           <p class = "proTextSubTwo">i became a co-founder of this project and role was mainly focused around coding and designing the website as well as formatting and laying out the design of the pages of the magazine</p>
-          <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "techBut">process</button></a>
-          <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "techButTwo">website</button></a>
+          <a href = "http://whatsupwithtech.online/" target = "_blank"><button type="button" class = "techBut">process</button></a>
+          <a href = "http://whatsupwithtech.online/" target = "_blank"><button type="button" class = "techButTwo">website</button></a>
 
         </div>
 
@@ -168,9 +170,21 @@
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub"> on the last two days at kode with klossy, everyone was paired up with a partner to make any type of website. my partner and i were both passionate about women empowerment. with this passion in mind, we decided to focus our website around giving girls more resources in STEM since we did not really see that through our schools.</p>
             <p class = "proTextTwo"> how i contributed </p>
+            <p class = "proTextSubTwo">- i wireframed the website to make it fun and interactive for anyone that is browsing through the website <br><br> - i researched projects and interviewed prominent women in STEM</p>
             <p class = "proTextThree"> the outcomes: </p>
           </div>
 
+          <div class = "aznPage">
+            <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
+            <h1 class = "projectTitleS"> AZN Magazine </h1>
+            <img class = "logoJustCode" src = "aznlogo.PNG">
+            <p class = "projectPara"> a online website that gives resources to young girls interested in the STEM fields </p>
+            <p class = "proText">why i did this?</p>
+            <p class = "proTextSub"> on the last two days at kode with klossy, everyone was paired up with a partner to make any type of website. my partner and i were both passionate about women empowerment. with this passion in mind, we decided to focus our website around giving girls more resources in STEM since we did not really see that through our schools.</p>
+            <p class = "proTextTwo"> how i contributed </p>
+            <p class = "proTextSubTwo">- i wireframed the website to make it fun and interactive for anyone that is browsing through the website <br><br> - i researched projects and interviewed prominent women in STEM</p>
+            <p class = "proTextThree"> the outcomes: </p>
+          </div>
 
         </div>
       </div>
@@ -199,13 +213,15 @@
                 <input type="image" src="memeish.jpg" name="button" id="dreamscape" class = "picsPage"/>
                 <p class = "curioText"> dreamscape <br> immersive </p>
               </div>
+              <p class = "curioWhy"> why? </p>
+              <p class = "curioAnswer"> click the images to see why i <br>have an interest for that thing <br>& then click the arrows to see <br>more curiosities</p>
             </div>
             <div class = "curosPageTwo">
-            <p class = "curoSecArticle"> sweet article finds </p>
+            <img class = "curioImg" src = "curioRead.jpg">
+            <p class = "curoSecArticle"> inspirational article finds </p>
             <a href = "https://www.npr.org/2019/07/18/743157480/toys-r-us-is-coming-back-but-with-a-different-approach" target = "_blank"><p class = "curoFirstArt"> the Toys R Us rebrand </p></a>
+            <a href = "https://www.nytimes.com/2019/11/07/opinion/nike-running-mary-cain.html?smid=nytcore-ios-share" target = "_blank"><p class = "curoSecArt"> Mary Cain </p></a>
             </div>
-            <p class = "curioWhy"> why? </p>
-            <p class = "curioAnswer"> click the images to see why i <br>have an interest for that thing <br>& then click the arrows to see <br>more curiosities</p>
             <div class = "lineFlexC">
               <hr class = "lineAbout" align = "center" color = "#0b6069">
             </div>
@@ -278,6 +294,11 @@
             <button class = "buttonNoteThree">
               <p class = "titleNoteMenu"> Climate Dystopia </p>
               <p class = "noteSubTextMenu">10/25/19</p>
+            </button>
+            <hr class = "noteLine" align = "left" color = "black">
+            <button class = "buttonNoteFour">
+              <p class = "titleNoteMenu"> Mary Cain </p>
+              <p class = "noteSubTextMenu">11/07/19</p>
             </button>
             <hr class = "noteLine" align = "left" color = "black">
             <button class = "buttonNoteFour">
