--- a/home.html
+++ b/home.html
@@ -235,6 +235,7 @@
         <input type="image" src="table.png" name="button" class="table"/>
       </section>
       <p>
+      <img class = "directionArr" src = "directionArr.png">
 <div class = "flexTableAgain">
 <section class = "rowTwo row-test">
         <button id = "allMail" data-tooltip="Send Me Some Mail">
