--- a/home.html
+++ b/home.html
@@ -302,10 +302,15 @@
               <p class = "noteSubTextMenu">11/07/19</p>
             </button>
             <hr class = "noteLine" align = "left" color = "black">
-            <button class = "buttonNoteFour">
+            <button class = "buttonNoteFive">
               <p class = "titleNoteMenu"> A Change </p>
               <p class = "noteSubTextMenu">11/15/19</p>
             </button>
+          <hr class = "noteLine" align = "left" color = "black">
+          <button class = "buttonNoteSix">
+            <p class = "titleNoteMenu"> K-POP Craze </p>
+            <p class = "noteSubTextMenu">12/1/19</p>
+          </button>
           <hr class = "noteLine" align = "left" color = "black">
           </div>
           <div class = "textNotes">
@@ -314,7 +319,9 @@
             <div class = "flexLine">
               <hr class = "lineTitle" align = "center" color = "black">
           </div>
-            <p class = "noteSubText" id = "subNoteOne"> formatted just like notes on an apple device, my notes are suppose to express what i have learned on a certain day or random thoughts or quotes that i like.</p>
+            <div class = "divNoteSubText" id = "subNoteOne">
+              <p class = "noteSubText">formatted just like notes on an apple device, my notes are suppose to express what i have learned on a certain day or random thoughts or quotes that i like.</p>
+            </div>
             <div class = "flexGIF">
             <img class = "cuteGIF" src = "https://media1.giphy.com/media/23gh2I75LPNCtY9G67/giphy.gif">
           </div>
