--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
             <p class = "redesignText"> PHOEBE'S <br>CREATIONS</p>
             <input type="image" src="techlogo.PNG" name="button" class="techMag"/>
             <p class = "techMagText"> WHAT'S UP <br>WITH TECH?</p>
-            <input type="image" src="night.gif" name="button" class="shetem"/>
+            <input type="image" src="shetemLogo.png" name="button" class="shetem"/>
             <p class = "shetemText"> S(HE)TEM</p>
             <input type="image" src="aznlogo.PNG" name="button" class="azn"/>
             <p class = "aznText"> AZN <br>MAGAZINE</p>
@@ -166,19 +166,23 @@
           <div class = "shetemPage">
             <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitleS"> S(HE)TEM </h1>
+            <img class = "logoJustCode" src = "shetemLogo.png">
             <p class = "projectPara"> a online website that gives resources to young girls interested in the STEM fields </p>
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub"> on the last two days at kode with klossy, everyone was paired up with a partner to make any type of website. my partner and i were both passionate about women empowerment. with this passion in mind, we decided to focus our website around giving girls more resources in STEM since we did not really see that through our schools.</p>
             <p class = "proTextTwo"> how i contributed </p>
             <p class = "proTextSubTwo">- i wireframed the website to make it fun and interactive for anyone that is browsing through the website <br><br> - i researched projects and interviewed prominent women in STEM</p>
-            <p class = "proTextThree"> the outcomes: </p>
+            <p class = "proTextThreeH"> highlights: </p>
+            <p class = "proTextSubThree">- we've been able to reach out to great women like NASA engineers or Karlie Kloss <br><br> - we were able to branch out to local libraries and give talks</p>
+            <a href = "http://shetem.world/" target = "_blank"><button type="button" class = "techButShe">website</button></a>
+            <a href = "http://shetem.world/" target = "_blank"><button type="button" class = "techButSheTwo">process</button></a>
           </div>
 
           <div class = "aznPage">
             <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
-            <h1 class = "projectTitleS"> AZN Magazine </h1>
+            <h1 class = "projectTitleA"> AZN Magazine </h1>
             <img class = "logoJustCode" src = "aznlogo.PNG">
-            <p class = "projectPara"> a online website that gives resources to young girls interested in the STEM fields </p>
+            <p class = "projectPara"> a magazine organization focused around asian cultures and backgrounds</p>
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub"> on the last two days at kode with klossy, everyone was paired up with a partner to make any type of website. my partner and i were both passionate about women empowerment. with this passion in mind, we decided to focus our website around giving girls more resources in STEM since we did not really see that through our schools.</p>
             <p class = "proTextTwo"> how i contributed </p>
