--- a/home.html
+++ b/home.html
@@ -182,7 +182,7 @@
             <input type = "image" src = "backArrow.png" name = "button" class = "backProject">
             <h1 class = "projectTitleA"> AZN Magazine </h1>
             <img class = "logoJustCode" src = "aznlogo.PNG">
-            <p class = "projectPara"> a magazine organization focused around asian cultures and backgrounds</p>
+            <p class = "projectPara"> a magazine organization focused around Asian cultures and backgrounds</p>
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub"> ever since i was young, i was either guessed as a Japanese, Korean, or Chinese Asian girl. i'm none of those, i'm Thai. i want people to know that there are more Asian countries out there besides the "big three". to do this, AZN Magazine will inform those unaware or uneducated of other ethnicities and their backgrounds. on other issues, we will focus around cultural appropriations.</p>
             <p class = "proTextTwo"> how i contributed </p>
