--- a/home.html
+++ b/home.html
@@ -247,6 +247,7 @@
             <a href = "https://www.npr.org/2019/07/18/743157480/toys-r-us-is-coming-back-but-with-a-different-approach" target = "_blank"><p class = "curoFirstArt"> The Toys R Us Rebrand </p></a>
             <a href = "https://www.nytimes.com/2019/11/07/opinion/nike-running-mary-cain.html?smid=nytcore-ios-share" target = "_blank"><p class = "curoSecArt"> Mary Cain </p></a>
             <a href = "https://www.ted.com/talks/pranav_mistry_the_thrilling_potential_of_sixthsense_technology?language=en" target = "_blank"><p class = "curoThiArt"> The Sixth Sense </p></a>
+            <a href = "https://www.cnn.com/2019/12/12/business/worlds-first-3d-printed-neighborhood-trnd/index.html" target = "_blank"><p class = "curoFourArt"> 3D Printed Houses </p></a>
             </div>
             <div class = "lineFlexC">
               <hr class = "lineAbout" align = "center" color = "#0b6069">
