--- a/home.html
+++ b/home.html
@@ -263,6 +263,7 @@
       </section>
       <p>
       <img class = "directionArr" src = "directionArr.png">
+      <img class = "scrollArr" src = "scrollArr.png">
 <div class = "flexTableAgain">
 <section class = "rowTwo row-test">
         <button id = "allMail" data-tooltip="Send Me Some Mail">
