--- a/home.html
+++ b/home.html
@@ -54,10 +54,11 @@
   <img class = "picsPage" src = "IMG_1491.jpg" id = "marathon">
   <img class = "picsPage" src = "IMG_5003.JPG" id = "track">
   <img class = "picsPage" src = "dittowall.jpg" id = "yea">
-  <h1 id = "maraTextTitle"> 1.20.19 </h1>
-  <h1 id = "maraText">here's a picture of me with my friend, jackie, finishing the half marathon at 2 hours!</h1>
+  <h1 id = "maraTextTitle"> 1.20.19</h1>
+  <h1 id = "maraText">here's a picture of me with my friend, Jackie, finishing the Pasadena Half Marathon at 2 hours!</h1>
   <h1 id = "trackTextTitle"> 8.2.19 </h1>
-  <h1 id = "trackText">kode with klossy</h1>
+  <h1 id = "trackText">kode with <br>klossy</h1>
+  <h1 id = "trackPara"> </p>
   <h1 id = "yeaText"> hey </h1>
 </div>
 <div class = "thirdPage">
@@ -160,11 +161,11 @@
             <p class = "proText">why i did this?</p>
             <p class = "proTextSub"> throughout my whole academic background, i've always been given packets or flashcards to memorize content. this time of learning only lasts for short-time memory and become boring for students.</p>
             <p class = "proTextTwo"> how i contributed </p>
-            <p class = "proTextSubTwo">- i wireframed the website to make it fun and interactive for anyone that is browsing through the website <br><br> - i researched projects and interviewed prominent women in STEM</p>
-            <p class = "proTextThreeH"> highlights: </p>
+            <p class = "proTextSubTwo">- i created a modern and aesthetic website in which teachers and students can go on and navigate easily.</p>
+            <p class = "proTextThreeH"> our plan: </p>
             <p class = "proTextSubThree">- we've been able to reach out to great women like NASA engineers or Karlie Kloss <br><br> - we were able to branch out to local libraries and give talks</p>
-            <a href = "http://shetem.world/" target = "_blank"><button type="button" class = "techButShe">website</button></a>
-            <a href = "http://shetem.world/" target = "_blank"><button type="button" class = "techButSheTwo">process</button></a>
+            <a href = "https://bphoebew.github.io/edu/" target = "_blank"><button type="button" class = "techButShe">website</button></a>
+            <a href = "https://bphoebew.github.io/edu/" target = "_blank"><button type="button" class = "techButSheTwo">process</button></a>
           </div>
 
           <div class = "shetemPage">
