--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>home | phoebe wongphatarakul</title>
+    <title>about | phoebe wongphatarakul</title>
     <link rel="stylesheet" href="about.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:700&display=swap" rel="stylesheet">
   </head>
@@ -27,12 +27,15 @@
       <div class = "flexCen">
         <img class = "profile" src = "phoebeAbout.jpg">
       </div>
+      
       <div class = "flexHome">
       <div class = "homeIphone">
-        <a href = "home.html"><input type="image" src="https://www.jing.fm/clipimg/full/259-2590204_home-button-transparent-transparent-background-home-button.png" name="button" class="home"></a>
+        <a href = "home.html"><input type="image" src="homeButton.png" name="button" class="home"></a>
       </div>
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script type="text/javascript" src="home.js"></script>
+      <script type="text/javascript" src="about.js"></script>
+
   </body>
 </html>
