--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>about | phoebe wongphatarakul</title>
     <link rel="stylesheet" href="about.css">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:700&display=swap" rel="stylesheet">
   </head>
     <body onload="startTime()">
@@ -12,22 +13,64 @@
       <img class = "preGIF" src="25.gif" alt="NILA">
     </div>
     </div>
-      <div class = "heading">
-        <img class = "me" src = "memeish.jpg">
-        <h1> Phoebe Wongphatarakul </h1>
-          <!-- <p><a href="about.html"> About </a></p>
-          <p><a href = "contact.html"> Contact </a></p>
-          <p><a href = "settings.html"> Settings </a></p> -->
-          <!-- <p class = "spaceRight"> bphoebew@gmail.com </p> -->
-          <img class = "IG" src = "IGICON.png">
-          <img class = "mailIcon" src = "mailTop.png">
-          <div id="clock"></div>
-      </div>
-      <h1 class = "name"> Phoebe Wongphatarakul </h1>
-      <div class = "flexCen">
-        <img class = "profile" src = "phoebeAbout.jpg">
-      </div>
-      
+      <section id = "one">
+        <div class = "heading">
+          <img class = "me" src = "memeish.jpg">
+          <h1> Phoebe Wongphatarakul </h1>
+            <img class = "IG" src = "IGICON.png">
+            <img class = "mailIcon" src = "mailTop.png">
+            <div id="clock"></div>
+        </div>
+
+        <h1 class = "title"> ABOUT </h1>
+        <div class = "flexCen">
+          <img class = "processPic" src = "aboutTitle.png">
+        </div>
+  </section>
+
+  <section id = "two">
+    <h1 class = "name"> Phoebe Wongphatarakul </h1>
+    <div class = "flexCen">
+    <img class = "phoebe" src = "phoebeAbout.jpg">
+  </div>
+    <p class = "nameSub">just a girl who loves creative coding and solving problems of the world <br><br> AND <br><br> eating rice krispy treats</p>
+  </section>
+
+  <section id = "three">
+    <h1 class = "quest">Who Am I?</h1>
+    <div class = "flexRow">
+      <img class = "codePic" src = "coder.png">
+      <div class = "flexCol">
+        <h1 class = "answer"> - I am a learner</h1>
+        <h1 class = "answer"> - I am a coder</h1>
+        <h1 class = "answer"> - I am a creator</h1>
+    </div>
+    </div>
+    <h1 class = "questTwo">Curiosities</h1>
+    <div class = "flexRow">
+      <div class = "flexColT">
+        <h1 class = "answer"> - Yayoi Kusama</h1>
+        <h1 class = "answer"> - Web Design</h1>
+        <h1 class = "answer"> - Dreamscape Immersive</h1>
+        <h1 class = "answer"> - Human-Computer Interaction</h1>
+    </div>
+        <img class = "curioPic" src = "curiosities.png">
+    </div>
+  </section>
+
+  <section id = "four">
+    <h1 class = "quest">Cool Articles</h1>
+    <div class = "flexRow">
+      <img class = "readPic" src = "curioRead.png">
+      <div class = "flexCol">
+        <a href = "https://www.npr.org/2019/07/18/743157480/toys-r-us-is-coming-back-but-with-a-different-approach" target = "_blank"><h1 class = "thirdTextSubPro"> - Toys R Us Rebrand </h1></a>
+        <a href = "https://www.nytimes.com/2019/11/07/opinion/nike-running-mary-cain.html?smid=nytcore-ios-share" target = "_blank"><h1 class = "thirdTextSubPro"> - Mary Cain </h1></a>
+        <a href = "https://www.ted.com/talks/pranav_mistry_the_thrilling_potential_of_sixthsense_technology?language=en" target = "_blank"><h1 class = "thirdTextSubPro"> - The Sixth Sense</h1></a>
+        <a href = "https://www.cnn.com/2019/12/12/business/worlds-first-3d-printed-neighborhood-trnd/index.html" target = "_blank"><h1 class = "thirdTextSubPro"> - 3D Printed Houses </h1></a>
+    </div>
+    </div>
+  </section>
+
       <div class = "flexHome">
       <div class = "homeIphone">
         <a href = "home.html"><input type="image" src="homeButton.png" name="button" class="home"></a>
