--- a/process.html
+++ b/process.html
@@ -13,6 +13,7 @@
       <img class = "preGIF" src="25.gif" alt="NILA">
     </div>
     </div>
+    <section id = "one">
       <div class = "heading">
         <img class = "me" src = "memeish.jpg">
         <h1> Phoebe Wongphatarakul </h1>
@@ -21,21 +22,36 @@
           <div id="clock"></div>
       </div>
 
-<section id = "one">
-
       <h1 class = "title"> PROCESS </h1>
       <div class = "flexCen">
         <img class = "processPic" src = "processPic.png">
       </div>
-      
+
 </section>
 
 <section id = "two">
-      <h1 class = "title"> PROCESS </h1>
-      <div class = "flexCen">
-        <img class = "processPic" src = "processPic.png">
-      </div>
+  <h1 class = "quest">The Idea:</h1>
+  <h1 class = "answer">Throughout my life, I've always had my head stuck in some sort of technogical device as I was intriguied by them. I wanted this growing passion of technology to be reflected onto my personal website. Your laptop helps you search up to learn everything about everything, but now my "laptop" will help you learn everything about me! </h1>
+  <h1 class = "questTwo">How I Coded It: </h1>
+  <h1 class = "answer">Yep, you read that right. I coded this website! I coded this website through atom, a free text editor, and then published it to Github. I also wireframed the site before coding it, so that I had an idea of what I wanted to do.</h1>
+<div class = "linksProcess">
+  <h1 class = "githubProcess">Check out my Github Code <a class = "processLink" href = "https://github.com/bphoebew/phoebe" target = "_blank">HERE</a></h1>
+  <h1 class = "wireframeProcess">Check out my wireframe <a class = "processLink" href = "phoebeProcess.pdf" target = "_blank">HERE</a></h1>
+</div>
 </section>
+
+<section id = "three">
+  <h1 class = "quest">The Cartoons:</h1>
+  <h1 class = "answer">All of the drawings on this website were drawn by me on Procreate. For each folder, the drawing of me is suppose to describe it. For example on the projects folder, I am putting on my "thinking cap" because all my projects have a problem that I deeply think to try and solve. </h1>
+  <div class = "picRow">
+    <img class = "codePic" src = "coder.png">
+    <img class = "cartPic" src = "curious.png">
+    <img class = "threePic" src = "processPic.png">
+  </div>
+  <h1 class = "questTwo">Fun Facts: </h1>
+  <h1 class = "answer">If you are looking at this website through a laptop, you will see a version of my website that looks like a desktop. On the other hand, if you are looking from the phone, you will see a version that looks like an IPhone</h1>
+</section>
+
 
       <div class = "flexHome">
       <div class = "homeIphone">
