--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>projects | phoebe wongphatarakul</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="projects.css">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:700&display=swap" rel="stylesheet">
   </head>
     <body onload="startTime()">
@@ -12,6 +13,8 @@
       <img class = "preGIF" src="25.gif" alt="NILA">
     </div>
     </div>
+    <section id = "one">
+
       <div class = "heading">
         <img class = "me" src = "memeish.jpg">
         <h1> Phoebe Wongphatarakul </h1>
@@ -19,7 +22,14 @@
           <img class = "mailIcon" src = "mailTop.png">
           <div id="clock"></div>
       </div>
+      <h1 class = "title"> PROJECTS </h1>
+      <div class = "flexCen">
+        <img class = "processPic" src = "projectsTitle.png">
+      </div>
 
+</section>
+  <section id = "two">
+  </section>
       <div class = "flexHome">
       <div class = "homeIphone">
         <a href = "home.html"><input type="image" src="homeButton.png" name="button" class="home"></a>
