--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>projects | phoebe wongphatarakul</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="contact.css">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:700&display=swap" rel="stylesheet">
   </head>
     <body onload="startTime()">
@@ -12,18 +13,27 @@
       <img class = "preGIF" src="25.gif" alt="NILA">
     </div>
     </div>
+<section id = "one">
       <div class = "heading">
         <img class = "me" src = "memeish.jpg">
         <h1> Phoebe Wongphatarakul </h1>
-          <!-- <p><a href="about.html"> About </a></p>
-          <p><a href = "contact.html"> Contact </a></p>
-          <p><a href = "settings.html"> Settings </a></p> -->
-          <!-- <p class = "spaceRight"> bphoebew@gmail.com </p> -->
           <img class = "IG" src = "IGICON.png">
           <img class = "mailIcon" src = "mailTop.png">
           <div id="clock"></div>
       </div>
-
+      <h1 class = "title"> CONTACT </h1>
+      <div class = "flexCen">
+        <img class = "processPic" src = "mailTitle.png">
+      </div>
+</section>
+<section id = "two">
+  <h1 class = "mail"> Email: </h1>
+  <h1 class = "mailSub">bphoebew@gmail.com</h1>
+  <h1 class = "mailT"> Github User: </h1>
+  <h1 class = "mailSub">bphoebew</h1>
+  <h1 class = "mailT"> Instagram: </h1>
+  <h1 class = "mailSub">its.phoebee</h1>
+</section>
       <div class = "flexHome">
       <div class = "homeIphone">
         <a href = "home.html"><input type="image" src="homeButton.png" name="button" class="home"></a>
