--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
   <section id = "two">
           <h1 class = "tableCon"> Click on which Project You Would Like to Learn More About </h1>
           <div class = "flexCol">
-            <a href = "#three"><h1 class = "tableSub">Just Coding Things </h1></a>
+            <a href = "justCode.html"><h1 class = "tableSub">Just Coding Things </h1></a>
             <h1 class = "tableSub">PSEUDO </h1>
             <h1 class = "tableSub">S(HE)TEM </h1>
             <h1 class = "tableSub">AZN Magazine </h1>
@@ -39,8 +39,6 @@
             <h1 class = "tableSub">Phoebe's Creations </h1>
             <h1 class = "tableSub">What's Up With Tech? </h1>
           </div>
-  </section>
-  <section id = "three">
   </section>
       <div class = "flexHome">
       <div class = "homeIphone">
