--- a/about.html
+++ b/about.html
@@ -56,11 +56,8 @@
     </div>
         <img class = "curioPic" src = "curiosities.png">
     </div>
-  </section>
-
-  <section id = "four">
     <h1 class = "quest">Cool Articles</h1>
-    <div class = "flexRow">
+    <div class = "flexRow" style = "margin-bottom: 150px;">
       <img class = "readPic" src = "curioRead.png">
       <div class = "flexCol">
         <a href = "https://www.npr.org/2019/07/18/743157480/toys-r-us-is-coming-back-but-with-a-different-approach" target = "_blank"><h1 class = "thirdTextSubPro"> - Toys R Us Rebrand </h1></a>
