--- a/process.html
+++ b/process.html
@@ -38,9 +38,6 @@
   <h1 class = "githubProcess">Check out my Github Code <a class = "processLink" href = "https://github.com/bphoebew/phoebe" target = "_blank">HERE</a></h1>
   <h1 class = "wireframeProcess">Check out my wireframe <a class = "processLink" href = "phoebeProcess.pdf" target = "_blank">HERE</a></h1>
 </div>
-</section>
-
-<section id = "three">
   <h1 class = "quest">The Cartoons:</h1>
   <h1 class = "answer">All of the drawings on this website were drawn by me on Procreate. For each folder, the drawing of me is suppose to describe it. For example on the projects folder, I am putting on my "thinking cap" because all my projects have a problem that I deeply think to try and solve. </h1>
   <div class = "picRow">
@@ -49,7 +46,7 @@
     <img class = "threePic" src = "processPic.png">
   </div>
   <h1 class = "questTwo">Fun Facts: </h1>
-  <h1 class = "answer">If you are looking at this website through a laptop, you will see a version of my website that looks like a desktop. On the other hand, if you are looking from the phone, you will see a version that looks like an IPhone</h1>
+  <h1 class = "answer" style = "margin-bottom: 150px;">If you are looking at this website through a laptop, you will see a version of my website that looks like a desktop. On the other hand, if you are looking from the phone, you will see a version that looks like an IPhone</h1>
 </section>
 
 
