--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
           <h1 class = "tableCon"> Click on which Project You Would Like to Learn More About </h1>
           <div class = "flexCol">
             <a href = "justCode.html"><h1 class = "tableSub">Just Coding Things </h1></a>
-            <h1 class = "tableSub">PSEUDO </h1>
+            <a href = "pseudo.html"><h1 class = "tableSub">PSEUDO </h1></a>
             <h1 class = "tableSub">S(HE)TEM </h1>
             <h1 class = "tableSub">AZN Magazine </h1>
             <h1 class = "tableSub">JumpoShrimping </h1>
