--- a/pseudo.html
+++ b/pseudo.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>just coding things | phoebe wongphatarakul</title>
+    <title>pseudo | phoebe wongphatarakul</title>
     <link rel="stylesheet" href="justCode.css">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:700&display=swap" rel="stylesheet">
   </head>
-    <body style = "background-color: white;" onload="startTime()">
+    <body onload="startTime()">
       <div class="preloader-wrapper">
     <div class="preloader">
       <img class = "preGIF" src="25.gif" alt="NILA">
@@ -24,14 +24,14 @@
       </div>
 
       <div class = "flexColTwo">
-  <h1 class = "proText"> Just Coding Things </h1>
-  <h1 class = "proDes">an all-girls organization dedicated to helping each other and others to know how to code</h1>
+  <h1 class = "proText"> PSEUDO </h1>
+  <h1 class = "proDes">an online web game based on online predators and how to identify and approach one if one were ever put in the situation</h1>
         </div>
 <div class = "flexRowTwo">
   <img class = "proImg" src = "justCode.png">
   <div class = "flexColTwo">
     <h1 class = "proTitle">Why I Did This? </h1>
-    <h1 class = "proSub">Seeing only a few amount of girls in my AP Computer Science Principles class, I was unsuprised. However, I quickly found out that many girls didn't want to take the class because they felt pressured that it was hard and too many stereotypes were put on girls in CS. I wanted to create a unique & supportive sisterhood for girls at WR who want to pursue Computer Science </h1>
+    <h1 class = "proSub">I know many friends that are catfished. Since they were only teens, they didn't know the effects of talking to strangers online. They just wanted to escape from the world and have fun. Sometimes its not just fun though. I wanted to help others such as my friends and help them be caution when online. Therefore, my friend and I created a game where you will be placed in scenarios talking to possible catfishers</h1>
   </div>
 </div>
 <div class = "flexRowTwo">
@@ -44,7 +44,9 @@
   </div>
   <div class = "flexColThr">
     <h1 class = "proTitle">Outcomes: </h1>
-    <h1 class = "proSub">-In the 2018-2019 school year, we were able to help 8 girls to learn how to code, with no prior knowledge <br><br> -In the 2019-2020 school year, we opened our club up to guys who wanted to learn web development</h1>
+    <h1 class = "proSub">- That we can spread awareness showing online predators are real and ppl need to be aware
+<br><br>
+- Can add more characters and monetize the game</h1>
   </div>
 </section>
 
